fix right align for numbers

--- a/src/app/_components/common/cust-editable-table/cust-editable-table.component.css
+++ b/src/app/_components/common/cust-editable-table/cust-editable-table.component.css
@@ -89,7 +89,6 @@ div.input-group {
 }
 
 .editable-text {
-	width: 80%;
 	padding: 0px;
 	border: none;
 	background-color: inherit;
@@ -108,4 +107,12 @@ div.input-group {
 
 .editable-checkbox {
 	padding: 1em !important;
+}
+
+.fa-search{
+	float: left;
+}
+
+.number{
+	float: right;
 }
